Make sure to notify on the root if a flush happens before we've done so.  Bug 397856, r=peterv, sr=sicking